# bouwmeester

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  age-recipients.txt  docker-compose.yml  justfile
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/bouwmeester/: seed.py  worker.py
backend/bouwmeester/api/: deps.py
backend/bouwmeester/core/: api_key.py  app.py  auth.py  config.py  database.py  encryption.py  rate_limit.py  session_store.py  whitelist.py
backend/bouwmeester/middleware/: auth_required.py  csrf.py  session.py
backend/bouwmeester/migrations/: env.py
backend/bouwmeester/models/: __init__.py  absence.py  access_request.py  activity.py  app_config.py  beleidskader.py  beleidsoptie.py  bron.py  bron_bijlage.py  corpus_node.py  doel.py  dossier.py  (+28 more)
backend/scripts/: access_whitelist.json.age  admin_emails.json.age  seed.py  seed_persons.json.age
backend/tests/: conftest.py  test_access_requests.py  test_activity.py  test_api_key.py  test_auth.py  test_bron.py  test_edge_types.py  test_edges.py  test_graph.py  test_health.py  test_import_export.py  test_import_strategies.py  test_llm.py  test_mentions.py  test_moties.py  test_node_temporal.py  test_nodes.py  test_notifications.py  test_organisatie.py  test_organisatie_temporal.py  test_parlementair.py  test_parlementair_reprocess.py  test_people.py  test_person_emails.py  test_person_merge.py  test_person_phones.py  test_search.py  test_stakeholders.py  test_tags.py  test_tasks.py  test_webauthn.py  test_whitelist.py
(+322 files in other folders)
